dropshot/tests/fail/bad_server_only4.stderr
error: server `MyServer` does not have associated type `Context`
       (this type specifies the shared context for endpoints)
 --> tests/fail/bad_server_only4.rs:8:7
  |
8 | trait MyServer {}
  |       ^^^^^^^^

error[E0425]: cannot find function `api_description` in module `my_server`
  --> tests/fail/bad_server_only4.rs:18:16
   |
18 |     my_server::api_description::<MyImpl>();
   |                ^^^^^^^^^^^^^^^ not found in `my_server`

error[E0425]: cannot find function `stub_api_description` in module `my_server`
  --> tests/fail/bad_server_only4.rs:19:16
   |
19 |     my_server::stub_api_description();
   |                ^^^^^^^^^^^^^^^^^^^^ not found in `my_server`
